# html2maud

./: .gitignore  Cargo.toml  Readme.md  build-webapp.bat
binary/: Cargo.toml  tauri.conf.json
binary/icons/: icon.icns
binary/public/: index.html
binary/public/js/: paro.js
binary/src/: main.rs  paro_gui.rs
binary/static/: styles.css
docs/: html2maud-yew-8147113901c8d5c9.js  html2maud-yew-8147113901c8d5c9_bg.wasm  html2maud-yew-a85f7889ad80a7b7.js  html2maud-yew-a85f7889ad80a7b7_bg.wasm  index-96185c432284db62.css  index.html  trunk-template-74c2088ff5f065b1.js  trunk-template-74c2088ff5f065b1_bg.wasm
yew/: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
yew/src/: app.rs
