[package]
name = "html2maud-yew"
version = "0.1.2"
edition = "2021"
description = "Web Assembly version of html2maud"
readme = "README.md"
repository = "https://github.com/grayfallstown/html2maud/yew"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
html2maud = "0.1.11"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
